.68, fix player cards align

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -188,7 +188,6 @@ p {
 }
 
 .player-section {
-  text-align: center;
   /* background-color: tomato; */
   height: 60%;
   max-width: 50rem;
